# knowledge-engineering

./: .gitignore  LICENSE  NOTICE  README.md  analyze_call_graph.py  analyze_call_graph_v2.py  daemon_interpret.py  docker-compose.yml  interpret_daemon_summary.txt  main.py  pyproject.toml  regenerate_summaries.py  requirements.txt  run_interpret.py  run_requirement_analysis.py  run_topological_interpret.py  setup.sh
config/: project.yaml
javaparser-bridge/: dependency-reduced-pom.xml  pom.xml
src/: __init__.py  __main__.py
src/app/: __init__.py  streamlit_app.py  styles.py
src/config/: __init__.py  models.py
src/core/: __init__.py  context.py  domain_enums.py  language_defaults.py  paths.py  weaviate_defaults.py
src/data_trigger/: __init__.py  loader.py
src/knowledge/: __init__.py  abstractions.py  base_interpretation_runner.py  base_weaviate_store.py  business_interpretation_context.py  business_interpretation_runner.py  business_interpretation_strategies.py  business_question_lexical_rerank.py  callchain_interpreter.py  ddl_parser.py  factories.py  graph.py  graph_neo4j.py  interpretation_item_helpers.py  interpretation_runner_inputs.py  interpretation_store_adapter.py  mapper_access_index.py  mapper_sql_parser.py  (+16 more)
tests/: test_business_interpretation_context.py  test_business_interpretation_runner.py  test_business_question_lexical_rerank.py  test_graph_walk_config.py  test_impact_analysis_pure.py  test_lexical_rerank_ascii.py  test_method_entity_id_normalize.py  test_pipeline_commands_retry.py  test_pipeline_gateways.py  test_scene_config_view.py
(+105 files in other folders)
